# regenie-corpus

./: LICENSE  README.md  guides.csv  pyproject.toml  registry.csv  update-sitemaps.py  update-urls.py
managed-urls/: docs.regen.network.csv  registry-credit-class-pdfs.csv  registry-handbook-pdfs.csv  registry-methodology-pdfs.csv
manual-urls/: buf-regen-ledger.csv
