[tool.poetry]
name = "regenie-corpus"
version = "0.1.0"
description = ""
authors = ["Aaron Craelius <aaronc@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "regenie_corpus"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
